--- a/src/sdlport/Makefile.am
+++ b/src/sdlport/Makefile.am
@@ -17,5 +17,5 @@ libsdlport_a_LIBADD =
 
 INCLUDES = -I$(srcdir)/../ -I$(srcdir)/../imlib $(SDL_CFLAGS)
 
-CPPFLAGS = @CPPFLAGS@ -DNO_CHECK -DASSETDIR=\"$(assetdir)\"
+CPPFLAGS = @CPPFLAGS@ -DNO_CHECK -DASSETDIR=\"$(assetdir)\" -DHAVE_OPENGL
 
