--- a/src/net/Makefile.am
+++ b/src/net/Makefile.am
@@ -1,4 +1,6 @@
 
+include $(top_srcdir)/build/autotools/common.am
+
 noinst_LIBRARIES = libnet.a
 
 libnet_a_SOURCES = \
@@ -10,7 +12,5 @@ libnet_a_SOURCES = \
     ghandler.h undrv.h \
     $(NULL)
 
-INCLUDES = -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib $(SDL_CFLAGS)
-
-CPPFLAGS = @CPPFLAGS@ -DNO_CHECK
+libnet_a_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib $(AM_CPPFLAGS)
 
