--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,4 +1,6 @@
 
+include $(top_srcdir)/build/autotools/common.am
+
 EXTRA_DIST = \
     $(demos) $(music) $(lisp) $(extra) $(art) $(levels) $(doc) $(sound)
 
