audio: only activate the "song" class if SDL_mixer is present.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -6,5 +6,5 @@ man_MANS = abuse.6 abuse-tool.6
 assetdir = $(sharedir)/asset
 asset_DATA = abuse.bmp abuse.png
 
-EXTRA_DIST = $(asset_DATA)
+EXTRA_DIST += $(asset_DATA)
 
