--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = lisp net imlib sdlport
+SUBDIRS = lisp net imlib @SDLPORT_DIR@
 
 bin_PROGRAMS = abuse abuse-tool
 
@@ -64,7 +64,7 @@ abuse_SOURCES = \
     ui/volumewindow.cpp ui/volumewindow.h \
     $(NULL)
 
-EXTRALIBS = lisp/liblisp.a sdlport/libsdlport.a imlib/libimlib.a net/libnet.a
+EXTRALIBS = lisp/liblisp.a @SDLPORT_DIR@/libsdlport.a imlib/libimlib.a net/libnet.a
 abuse_LDADD = $(EXTRALIBS)
 abuse_DEPENDENCIES = $(EXTRALIBS)
 
@@ -74,8 +74,7 @@ abuse_tool_SOURCES = \
 abuse_tool_LDADD = imlib/libimlib.a
 abuse_tool_DEPENDENCIES = $(abuse_tool_LDADD)
 
-INCLUDES = -I$(srcdir) -I$(srcdir)/lisp -I$(srcdir)/imlib \
+INCLUDES = -I$(srcdir) -I $(srcdir)/lisp -I$(srcdir)/imlib \
            -I$(srcdir)/net $(SDL_CFLAGS)
 
 CPPFLAGS = @CPPFLAGS@ -DNO_CHECK
-
