build: clean up build system, removing deprecated stuff.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -74,7 +74,6 @@ abuse_tool_SOURCES = \
 abuse_tool_LDADD = imlib/libimlib.a
 abuse_tool_DEPENDENCIES = $(abuse_tool_LDADD)
 
-INCLUDES = -I$(srcdir) -I $(srcdir)/lisp -I$(srcdir)/imlib \
-           -I$(srcdir)/net $(SDL_CFLAGS)
+CPPFLAGS = @CPPFLAGS@ -I$(srcdir) -I $(srcdir)/lisp \
+           -I$(srcdir)/imlib -I$(srcdir)/net $(SDL_CFLAGS)
 
-CPPFLAGS = @CPPFLAGS@ -DNO_CHECK
