--- a/src/lisp/Makefile.am
+++ b/src/lisp/Makefile.am
@@ -9,6 +9,5 @@ liblisp_a_SOURCES = \
     stack.h symbols.h \
     $(NULL)
 
-INCLUDES = -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib $(SDL_CFLAGS)
+CPPFLAGS = @CPPFLAGS@ -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib $(SDL_CFLAGS)
 
-CPPFLAGS = @CPPFLAGS@ -DNO_CHECK
