--- a/src/net/Makefile.am
+++ b/src/net/Makefile.am
@@ -10,7 +10,5 @@ libnet_a_SOURCES = \
     ghandler.h undrv.h \
     $(NULL)
 
-INCLUDES = -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib $(SDL_CFLAGS)
-
-CPPFLAGS = @CPPFLAGS@ -DNO_CHECK
+CPPFLAGS = @CPPFLAGS@ -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib $(SDL_CFLAGS)
 
