build: use Lol Engine as a submodule
ALl the code was ported to this new version of the framework.

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,60 @@
 # Autotools cruft
-Makefile.in
+*.o
+*.lo
+*.a
+*.la
+*.exe
+*.so
+*.elf
+*.self
+*.nexe
+*.userprefs
+*.usertasks
+*.pidb
+.auto
+.libs
+.deps
+.dirstamp
+.*.androiddir
+.*.androidstamp
 Makefile
+Makefile.in
 aclocal.m4
 autom4te.cache
-config.h
 config.h.in
+config.h
 config.log
 config.status
 configure
 libtool
 stamp-*
-*.o
-*.a
-.auto
-.deps
-.dirstamp
+*-stamp
+test-suite.log
+# Personal stuff
+patch-*.diff
+# Debugging cruft
+core
+!core/
+core.*
+vgcore.*
+callgrind.out.*
+perf.data*
+*.gcda
+*.gcno
+# Editor cruft
+.*.swp
+*~
+.ycm_extra_conf.pyc
 # Visual Studio cruft
 *.vcxproj.user
-# Our binaries
-src/abuse
-src/abuse-tool
-doc/abuse.6
-doc/abuse-tool.6
+*.csproj.user
+binaries/*Debug
+binaries/*Release
+.vs
+*.VC.VC.opendb
+*.VC.db
+*.sdf
+*.suo
+*.opensdf
+# ReSharper cruft
+_ReSharper.*
